--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-    <img class="rounded-full w-12 h-12"
-    src="https://i.ibb.co/xgbs4mz/andres.jpg"
-    alt="Andres photo">
+<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
+
     <nav class="flex flex-row gap-x-10 opacity-90">
         <a href="/">Home</a>
         <a href="/about">About</a>
