--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource-variable/onest'
 import Header from '../components/Header.astro';
 
 interface Props {
@@ -18,7 +19,9 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
+
 	<body>
+		<div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
 		<Header/>
 		<slot />
 	</body>
@@ -28,13 +31,13 @@ const { title } = Astro.props;
 		color-scheme: light dark;
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "onest", system-ui, sans-serif;
 	}
 
 	body {
-		background: #f2f2f2;
+		color: white;
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
 		min-height: 100vh;
 	}
 </style>
