--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import SocialPill from "../components/SocialPill.astro"
 title="Portfolio -Andres Franco L- Programmer and Web Developer"
 description="Hire a good programmer for your web or your mobile App">
 	<main>
-		<section class="w-full mx-auto lg:w-[740px] py-44">
+		<section class="w-full mx-auto lg:w-[740px] py-40">
 			<div class="flex justify-center">
 			<img class="rounded-full size-60 mb-7"
    			src="https://i.ibb.co/xgbs4mz/andres.jpg"
@@ -26,7 +26,7 @@ description="Hire a good programmer for your web or your mobile App">
 			class="flex justify-center items-center"
 			>
 				<Badge> Available for hire</Badge></a></div></h1>
-			<h2 class="text-2xl opacity-80 text-wrap justifify-content">+7 years of Professional experience. <span class="text-yellow-200/90">Web Developer and business Administrator.</span>
+			<h2 class="text-2xl opacity-80 text-wrap justifify-content">+7 years of Professional experience. <span class="text-red-300/90">Web Developer and business Administrator.</span>
 			From Bogota Colombia living in Mexico City. I recently complete the Professional Certification of Meta.
 			</h2>
 
