--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "@fontsource-variable/onest"
 
 import Header from "../components/Header.astro"
+import Experience from "../components/Experience.astro"
 
 
 interface Props {
@@ -24,11 +25,7 @@ const { description, title } = Astro.props
   </head>
 
   <body class="relative text-black dark:text-white">
-    <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-neutral-100 dark:bg-neutral-950
-      bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
-      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
-    >
+    <div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gradient-to-b from-black to-blue-900">
     </div>
     <Header />
     <slot />
@@ -46,7 +43,7 @@ const { description, title } = Astro.props
   }
 
   body {
-    color: rgba(17, 17, 17, 0.9);
+    color: white;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
