--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,16 +3,25 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCIE = [
   {
-    date: "Actualmente...",
-    title: "Creador de Contenido − Twitch",
+    date: "January - 2024",
+    title: "Meta Front-End Developer Certificate",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
+      `Earning this certificate by completing its 7 courses provided me with comprehensive understanding of UX/UI principles and practical use of Git/GitHub for version control.
+        Successfully completing the 7-course program for this certificate allowed me to master UX/UI design and confidently manage code versions using Git and GitHub.`,
+    image: 'https://images.credly.com/size/680x680/images/e91ed0b0-842b-417f-8d2f-b07535febdda/image.png'
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer  − Adevinta Spain",
+    date: "April - September 2023",
+    title: "Bootcamp Web Developer  − IronHack",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      `Over six intensive months at Ironhack (April 2023 - September 2023), I gained a comprehensive understanding of both front-end and back-end development, mastering a diverse toolkit of technologies, including:
+
+Front-End Expertise: JavaScript, React, HTML5, CSS3
+Back-End Proficiency: MongoDB
+Collaboration and Community:
+
+Ironhack's collaborative and project-based approach fostered my ability to work effectively within teams, communicate technical concepts clearly, and navigate the challenges of software development with problem-solving prowess. I actively participated in various groups and discussions, embracing the opportunity to learn from and alongside my peers.`,
+    image: 'https://images.credential.net/embed/40k29oui.png'
   },
 ]
 ---
