--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -3,14 +3,16 @@
         title: string
         description: string
         date: string
+        image: string
     }
-    const { title, description, date } = Astro.props
+    const { title, description, date , image} = Astro.props
 ---
 
 <li class="mb-10 ms-4">
     <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-    <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{date}</time>
-    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{title}</h3>
-    <p class="text-base font-normal text-gray-500 dark:text-gray-400">{description}</p>
+    <time class="mb-1 text-sm font-normal leading-none text-white-400 dark:text-white-500">{date}</time>
+    <h3 class="text-lg font-semibold text-yellow-200 dark:text-white py-4">{title}</h3>
+    <p class="text-base font-normal text-gray-300 text-justify dark:text-gray-400">{description}</p>
+    <img class="h-40 mx-auto mt-4" src={image} alt={title}>
 </li>
 
