--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,11 +43,11 @@ const { description, title } = Astro.props
   }
 
   body {
-    color: white;
+    background: #050505;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overscroll-behavior: none;
+    scroll-behavior: smooth;
   }
 
   @media (prefers-reduced-motion: reduce) {
