--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-center items-center py-5 w-[1120px] mx-auto text-white">
+<header class="flex justify-center items-center py-5 lg: xl:w-[1120px] mx-auto text-white">
 
     <nav class="flex flex-row gap-x-10 opacity-90">
         <a href="#top">Home</a>
