--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import "@fontsource-variable/onest"
 
 import Header from "../components/Header.astro"
-import Experience from "../components/Experience.astro"
+import Footer from "../components/Footer.astro"
 
 
 interface Props {
@@ -29,6 +29,7 @@ const { description, title } = Astro.props
     </div>
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 
