--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,51 @@
 ---
+import React from './icons/ReactJs.astro'
+import Html from './icons/HTML.astro'
+import Css from './icons/Css.astro'
+import MongoDB from './icons/MongoDB.astro'
+import Node from './icons/Node.astro'
+import Handlebars from './icons/Handlebars.astro'
+import Vite from './icons/Vite.astro'
+
+
+const TAGS = {
+    REACT: {
+        name: "React Js",
+        class: "bg-blue text-black",
+        icon: React,
+    },
+    HTML: {
+        name: "HTML",
+        class: "bg-orange text-black",
+        icon: Html,
+    },
+    CSS: {
+        name: "CSS",
+        class: "bg-blue text-black",
+        icon: Css,
+    },
+    MONGODB: {
+        name: "React Js",
+        class: "bg-green text-white",
+        icon: MongoDB,
+    },
+    NODEJS: {
+        name: "Node.js",
+        class: "bg-white text-green",
+        icon: Node,
+    },
+    HANDLEBARS: {
+        name: "Handlebars",
+        class: "bg-white text-black",
+        icon: Handlebars,
+    },
+    VITE: {
+        name: "Vite",
+        class: "bg-black text-white",
+        icon: Vite
+    },
+}
+
 const PROJECTS = [
     {
         title: 'Unibook-Pro. for Jeblush',
@@ -6,7 +53,7 @@ const PROJECTS = [
         link: 'https://unibookpro-app.netlify.app/',
         github: 'https://github.com/Andresfrla/unibook-pro-client',
         image: '/projects/jeblush.webp',
-        tags: ['React Js', 'HTML', 'CSS', 'MongoDB', 'NodeJs']
+        tags: [TAGS.REACT, TAGS.HTML, TAGS.CSS, TAGS.MONGODB, TAGS.NODEJS]
     },
     {
         title: 'LOL-Wiki',
@@ -14,7 +61,7 @@ const PROJECTS = [
         link: '',
         github: 'https://github.com/Andresfrla/LOL-Wiki',
         image: '/projects/LOL.webp',
-        tags: ['Handlebars', 'HTML', 'CSS']
+        tags: [TAGS.HANDLEBARS, TAGS.HTML, TAGS.CSS]
     },
     {
         title: 'Vampire VS Zombies',
@@ -22,7 +69,15 @@ const PROJECTS = [
         link: 'https://andresfrla.github.io/vampires-vs-zombies/',
         github: 'https://github.com/Andresfrla/vampires-vs-zombies',
         image: '/projects/vampires.webp',
-        tags: ['HTML', 'CSS']
+        tags: [TAGS.HTML, TAGS.CSS]
+    },
+    {
+        title: 'Basic E-commerce',
+        description: 'This basic e-commerce build using vite and React Js uses the different states to add products to the shopping cart',
+        link: '',
+        github: 'https://github.com/Andresfrla/basic-shop-react',
+        image: '/projects/ecommerce.webp',
+        tags: [TAGS.VITE ,TAGS.REACT, TAGS.HTML, TAGS.CSS]
     },
 ]
 ---
@@ -33,8 +88,13 @@ const PROJECTS = [
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
             <p class="text-lg mb-4 text-pretty">{description}</p>
             <ul>
-                {tags.map(tag =>
-                    <li>{tag}</li>
+                {tags.map((tag) =>
+                    <li>
+                        <span>
+                        <tag.icon class="size-4"/>
+                        {tag.name}
+                        </span>
+                    </li>
                 )}
             </ul>
             <img class="rounded shadow-2xl shadow-white/20" src={image} alt={`Screenshoot of the project ${title}`}>
