adding the basic footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,12 +56,12 @@ description="Hire a good programmer for your web or your mobile App">
 			<Experience />
 		</SectionContainer>
 
-		<SectionContainer id="experience">
+		<SectionContainer id="projects">
 			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 item-center">
 				<Code class="size-7"/>
 				Proyects
 			</h2>
-			<Projects />
+			<Projects/>
 		</SectionContainer>
 	</main>
 </Layout>
