--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,27 +11,27 @@ import Vite from './icons/Vite.astro'
 const TAGS = {
     REACT: {
         name: "React Js",
-        class: "bg-blue text-black",
+        class: "bg-blue-900 text-red",
         icon: React,
     },
     HTML: {
         name: "HTML",
-        class: "bg-orange text-black",
+        class: "bg-amber-800 text-white",
         icon: Html,
     },
     CSS: {
         name: "CSS",
-        class: "bg-blue text-black",
+        class: "bg-sky-950 text-white",
         icon: Css,
     },
     MONGODB: {
-        name: "React Js",
-        class: "bg-green text-white",
+        name: "Mongo DB",
+        class: "bg-green-700 text-white",
         icon: MongoDB,
     },
     NODEJS: {
         name: "Node.js",
-        class: "bg-white text-green",
+        class: "bg-white text-emerald-600",
         icon: Node,
     },
     HANDLEBARS: {
@@ -87,17 +87,17 @@ const PROJECTS = [
         <article>
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
             <p class="text-lg mb-4 text-pretty">{description}</p>
-            <ul>
+            <ul class="flex gap-x-2 flex-row mb-2">
                 {tags.map((tag) =>
                     <li>
-                        <span>
+                        <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
                         <tag.icon class="size-4"/>
                         {tag.name}
                         </span>
                     </li>
                 )}
             </ul>
-            <img class="rounded shadow-2xl shadow-white/20" src={image} alt={`Screenshoot of the project ${title}`}>
+            <img class="rounded shadow-2xl shadow-white/20 mb-10" src={image} alt={`Screenshoot of the project ${title}`}>
         </article>
     )
 }
