--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,16 +6,13 @@
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white sm:mt-0">
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">About</a>
+            <a href="#projects" class="hover:underline me-4 md:me-6">Projects</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+            <a href="#experience" class="hover:underline me-4 md:me-6">Certificate</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-        </li>
-        <li>
-            <a href="#" class="hover:underline">Contact</a>
+            <a href="#contact" class="hover:underline">Contact</a>
         </li>
     </ul>
     </div>
