--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -86,12 +86,12 @@ const PROJECTS = [
     PROJECTS.map(({title, description, tags, image }) => 
         <article>
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
-            <p class="text-lg mb-4 text-pretty">{description}</p>
+            <p class="text-lg mb-4 text-pretty text-justify">{description}</p>
             <ul class="flex gap-x-2 flex-row mb-2">
                 {tags.map((tag) =>
                     <li>
-                        <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}>
-                        <tag.icon class="size-4"/>
+                        <span class={`flex gap-x-2 rounded-full text-s mb-2 mt-3 ${tag.class} py-1 px-2`}>
+                        <tag.icon class="size-5"/>
                         {tag.name}
                         </span>
                     </li>
