--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,9 +73,9 @@ description="Hire a good programmer for your web or your mobile App">
 				<a class="flex flex-row mb-2" href="mailto:andresfranla@gmail.com">
 					<GmailIcon class="size-4 lg:size-6 mr-2"/> andresfranla@gmail.com </svg>
 				</a>
-				<a class="flex flex-row mb-2" href="https://github.com/Andresfrla">
+				<div class="flex flex-row mb-2">
 					<Phone class="size-4 lg:size-6 mr-2"/> +52 55 391 383 02 </svg>
-				</a>
+				</div>
 				<a class="flex flex-row mb-2" href="https://github.com/Andresfrla">
 					<GithubIcon class="size-4 lg:size-6 mr-2"/> Github </svg>
 				</a>
