--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,7 +6,8 @@ import MongoDB from './icons/MongoDB.astro'
 import Node from './icons/Node.astro'
 import Handlebars from './icons/Handlebars.astro'
 import Vite from './icons/Vite.astro'
-
+import Github from './icons/Github.astro'
+import Link from './icons/Link.astro'
 
 const TAGS = {
     REACT: {
@@ -46,6 +47,17 @@ const TAGS = {
     },
 }
 
+const DEPLOYS = {
+    GITHUB: {
+        name: "Github",
+        icon: Github
+    },
+    LINK: {
+        name: "Link",
+        icon: Link
+    }
+}
+
 const PROJECTS = [
     {
         title: 'Unibook-Pro. for Jeblush',
@@ -53,7 +65,7 @@ const PROJECTS = [
         link: 'https://unibookpro-app.netlify.app/',
         github: 'https://github.com/Andresfrla/unibook-pro-client',
         image: '/projects/jeblush.webp',
-        tags: [TAGS.REACT, TAGS.HTML, TAGS.CSS, TAGS.MONGODB, TAGS.NODEJS]
+        tags: [TAGS.REACT, TAGS.HTML, TAGS.CSS, TAGS.MONGODB, TAGS.NODEJS],
     },
     {
         title: 'LOL-Wiki',
@@ -83,21 +95,42 @@ const PROJECTS = [
 ---
 
 {
-    PROJECTS.map(({title, description, tags, image }) => 
+    PROJECTS.map(({ title, description, tags, image, link, github }) => (
         <article>
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
             <p class="text-lg mb-4 text-pretty text-justify">{description}</p>
             <ul class="flex gap-x-2 flex-row mb-2">
-                {tags.map((tag) =>
+                {tags.map((tag) => (
                     <li>
                         <span class={`flex gap-x-2 rounded-full text-s mb-2 mt-3 ${tag.class} py-1 px-2`}>
-                        <tag.icon class="size-5"/>
-                        {tag.name}
+                            <tag.icon class="size-5" />
+                            {tag.name}
                         </span>
                     </li>
-                )}
+                ))}
             </ul>
-            <img class="rounded shadow-2xl shadow-white/20 mb-10" src={image} alt={`Screenshoot of the project ${title}`}>
+            <img class="rounded shadow-2xl shadow-white/20 mb-10" src={image} alt={`Screenshot of the project ${title}`} />
+            <div class="items-center flex justify-center mb-5">
+            {link && (
+                <a href={link} class="flex items-center justify-center rounded-full text-s mb-2 mt-3 bg-blue-500 text-white py-1 px-2">
+                    <div class="rounded-full bg-white p-2">
+                        <Link class="size-5 text-blue-500" />
+                    </div>
+                </a>
+            )}
+
+            {github && (
+                <a href={github} class="flex items-center justify-center rounded-full text-s mb-2 mt-3 bg-gray-800 text-white py-1 px-2">
+                    <div class="rounded-full bg-white p-2">
+                        <Github class="size-5 text-gray-800" />
+                    </div>
+                </a>
+            )}
+            </div>
+            <hr class="mb-20">
         </article>
-    )
+    ))
 }
+
+
+
