--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -65,7 +65,7 @@ const PROJECTS = [
         link: 'https://unibookpro-app.netlify.app/',
         github: 'https://github.com/Andresfrla/unibook-pro-client',
         image: '/projects/jeblush.webp',
-        tags: [TAGS.REACT, TAGS.HTML, TAGS.CSS, TAGS.MONGODB, TAGS.NODEJS],
+        tags: [TAGS.REACT, TAGS.HTML, TAGS.MONGODB, TAGS.NODEJS],
     },
     {
         title: 'LOL-Wiki',
@@ -99,7 +99,7 @@ const PROJECTS = [
         <article>
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
             <p class="text-lg mb-4 text-pretty text-justify">{description}</p>
-            <ul class="flex gap-x-2 flex-row mb-2">
+            <ul class="flex gap-x-2 lg:flex-row mb-2 sm:flex-wrap">
                 {tags.map((tag) => (
                     <li>
                         <span class={`flex gap-x-2 rounded-full text-s mb-2 mt-3 ${tag.class} py-1 px-2`}>
