--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ description="Hire a good programmer for your web or your mobile App">
 		<SectionContainer id="projects">
 			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 item-center">
 				<Code class="size-7"/>
-				Proyects
+				Projects
 			</h2>
 			<Projects/>
 		</SectionContainer>
