--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import SectionContainer from '../components/SectionContainer.astro';
 import Code from '../components/icons/Code.astro';
 import Projects from '../components/Projects.astro';
 import Phone from '../components/icons/Phone.astro';
+import Download from '../components/icons/Download.astro';
 ---
 
 <Layout
@@ -45,6 +46,9 @@ description="Hire a good programmer for your web or your mobile App">
 					</SocialPill>
 					<SocialPill href="mailto:andresfranla@gmail.com">
 						<GmailIcon class="size-4 lg:size-6"/>andresfranla@gmail.com </svg>
+					</SocialPill>
+					<SocialPill href="https://drive.google.com/file/d/1SjZksltRKK7pujRZM70GclVWws53qpTn/view?usp=drive_link">
+						<Download class="size-4 lg:size-6"/>Download My Cv </svg>
 					</SocialPill>
 			</nav>
 		</SectionContainer>
