--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -118,23 +118,29 @@ const PROJECTS = [
             </ul>
             <img class="rounded shadow-2xl shadow-white/20 mb-10" src={image} alt={`Screenshot of the project ${title}`} />
             <div class="items-center flex justify-center mb-5">
-            {link && (
-                <a href={link} class="flex items-center justify-center rounded-full text-s mb-2 mt-3 bg-blue-500 text-white py-1 px-2">
-                    <div class="rounded-full bg-white p-2">
+                        {link && (
+            <div class="flex items-center justify-center mr-20">
+                <h3 class="mr-2">Link:</h3>
+                <a href={link} class="flex items-center justify-center rounded-full text-s bg-blue-500 text-white py-1 px-2">
+                    <div class="rounded-full bg-white p-2 mr-2">
                         <Link class="size-5 text-blue-500" />
                     </div>
                 </a>
-            )}
+            </div>
+        )}
 
-            {github && (
-                <a href={github} class="flex items-center justify-center rounded-full text-s mb-2 mt-3 bg-gray-800 text-white py-1 px-2">
-                    <div class="rounded-full bg-white p-2">
+        {github && (
+            <div class="flex items-center justify-center">
+                <h3 class="mr-2">Repo:</h3>
+                <a href={github} class="flex items-center justify-center rounded-full text-s bg-gray-800 text-white py-1 px-2">
+                    <div class="rounded-full bg-white p-2 mr-2">
                         <Github class="size-5 text-gray-800" />
                     </div>
                 </a>
-            )}
             </div>
-            <hr class="mb-20">
+        )}
+
+            </div>
         </article>
     ))
 }
