--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -124,7 +124,7 @@ const PROJECTS = [
             <div class="flex items-center justify-center mr-20">
                 <h3 class="mr-2">Link:</h3>
                 <a href={link} class="flex items-center justify-center rounded-full text-s bg-blue-500 text-white py-1 px-2">
-                    <div class="rounded-full bg-white p-2 mr-2">
+                    <div class="rounded-full bg-white p-2 mr-2 hover:scale-110">
                         <Link class="size-5 text-blue-500" />
                     </div>
                 </a>
@@ -135,7 +135,7 @@ const PROJECTS = [
             <div class="flex items-center justify-center">
                 <h3 class="mr-2">Repo:</h3>
                 <a href={github} class="flex items-center justify-center rounded-full text-s bg-gray-800 text-white py-1 px-2">
-                    <div class="rounded-full bg-white p-2 mr-2">
+                    <div class="rounded-full bg-white p-2 mr-2 hover:scale-110">
                         <Github class="size-5 text-gray-800" />
                     </div>
                 </a>
