--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { description, title } = Astro.props
   </head>
 
   <body class="relative text-black dark:text-white">
-    <div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gradient-to-b from-black to-blue-900">
+    <div class="absolute inset-0 z-[-2] min-h-screen w-full bg-gradient-to-b from-black via-blue-700 to-cyan-600"></div>
     </div>
     <Header />
     <slot />
